--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -11,6 +11,7 @@
         
         <div class="main-content">
             {{>header }}
+            <p>This site was created by Gustavo Rodriguez. It uses data frommapbox and darksky.net!</p>
             <img class = "portrait" src="/img/me.png" alt="">
         </div>       
         
